Rename ScrollType helper and combine some redundant checks.

BUG=606395
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:linux_layout_tests_slimming_paint_v2

Review-Url: https://codereview.chromium.org/2841763002
Cr-Commit-Position: refs/heads/master@{#467191}

Former-commit-id: 4eeacf4f4fa0bbfffb04f81d113875f044ac5141